Inclusion Bactracking y Matriz Dinamica al Server

--- a/GladServer/CMakeLists.txt
+++ b/GladServer/CMakeLists.txt
@@ -18,7 +18,7 @@ if(Boost_FOUND)
 endif()
 
 
-add_executable(GaldServer main.cpp Gladiador.cpp Gladiador.h Utilities.cpp Utilities.h con_handler.cpp con_handler.h Server.cpp Server.h Simulacion.cpp Simulacion.h Torre.cpp Torre.h node.cpp node.h ListaTorres.cpp ListaTorres.h)
+add_executable(GaldServer main.cpp nodo_matriz.cpp nodo_matriz.h backtrack.cpp backtrack.h lista.cpp lista.h listanodo.cpp listanodo.h matriz.cpp matriz.h Gladiador.cpp Gladiador.h Utilities.cpp Utilities.h con_handler.cpp con_handler.h Server.cpp Server.h Simulacion.cpp Simulacion.h Torre.cpp Torre.h node.cpp node.h ListaTorres.cpp ListaTorres.h)
 target_link_libraries(${PROJECT_NAME} ${CMAKE_THREAD_LIBS_INIT})
 
 if(Boost_FOUND)
